# turtleshell

./: CMakeLists.txt  Dockerfile  conanfile.py  pyproject.toml
.conan/: base  debug  default
.github/workflows/: dockerpublish.yml
build_utils/: merge_inis.py
example/notes/: Makefile
example/notes/conan-deps/: conanfile.py  conanfile.txt
example/notes/week-01/proj1/: CMakeLists.txt  main.cpp
example/notes/week-02/proj2/: CMakeLists.txt  Makefile  main.cpp
example/notes/week-02/proj2b/: CMakeLists.txt  main.cpp
example/notes/week-03/proj3/: CMakeLists.txt  Makefile  mymodule.cpp  pyproject.toml
